# scratch-compiler-2

./: Cargo.toml  README.md  architecture.md
docs/: language-reference.md
src/: ast.rs  builtins.rs  builtins.sc2  builtins.txt  codegen.rs  comptime.rs  diagnostics.rs  early_dce.rs  formatter.rs  function.rs  generator.rs  hir.rs  imports.rs  linter.rs  main.rs  mir.rs  name.rs  parser.rs  recursive_inlining.rs  semantics.rs  stdx.rs  syntax_errors.rs  ty.rs
src/hir/: lowering.rs  typed.rs  visit.rs
src/mir/: inlining.rs  late_dce.rs  linearity.rs  lowering.rs  mutability.rs  optimization.rs  visit.rs
src/mir/optimization/: canon.rs  constant_propagation.rs  control_flow.rs  dce.rs
tree-sitter-sc2/: .gitignore  Cargo.toml  grammar.js  package-lock.json  package.json
tree-sitter-sc2/queries/: highlights.scm  indents.scm  textobjects.scm
