[package]
name = "scratch-compiler-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codemap = "0.1.3"
codemap-diagnostic = { git = "https://github.com/Johan-Mi/codemap-diagnostic", version = "0.1.1" }
levenshtein = "1.0.5"
logos = "0.13.0"
petgraph = { version = "0.6.4", default-features = false }
rowan = "0.15.13"
ryu-js = "1.0.0"
sb3-builder = { git = "https://github.com/Johan-Mi/sb3-builder" }
